Changes in 1.8 (??.??.2011)

 - Added the ability to open an archive from an IReadFile*, added a FileToHeader tool with instructions of how to make a portable app that consists of a single executable file.

 - Added ISceneManager::createSceneNodeAnimator to create animators by name

 - The Makefile now creates a symlink from the soname to the binary name during install. Binary compatibility is only confirmed between minor releases, so the only useful symlink is from libIrrlicht.so.1.8 to libIrrlicht.so.1.8.0; others should rightly fail.

 - Added SMF mesh loader, loads meshes from 3D World Studio. Originally written by Joseph Ellis

 - The loader selection process now consistently checks loader lists in reverse order, so new loaders added to Irrlicht override the internal ones. This applies when adding external mesh, image, scene and archive loaders, image writers, plus node, animator and GUI element factories. 

 - Added getters to retrieve mesh, scene and archive loaders.

 - Added ISceneLoader interface and .irr loader. Users can now add their own scene loaders to the scene manager and use them by calling loadScene.

 - Renamed IGUIElement::bringToBack to sendToBack, like in Windows

 - Send EGET_ELEMENT_CLOSED event when context menues should be closed (thx @ Mloren for reporting).

 - zip archive fixes: Fix directory tags in file list. Fix loading of stream zip files which have file sizes only in the central directory.

 - Added treeview to GUI editor, provided by Armen

 - Added root type for GUI environment

 - Fixed panel scrollbars in GUI editor, reported by Armen

 - Fix b3d loading of files with mixed mesh/bone sections.

 - Fix particle emitters which used integer random numbers so far. The distributions of the particles should be much better (and the code also somewhat faster) now.

 - Add new random method frand: Returns a random number in the interval [0..1] and gives better distributions than using fmodf on the integer number.
